  * debian/sbuild.(preinst|postinst|postrm):
    - Remove special cases for versions older than oldstable.  Update
      addition and removal of sbuild group to use return value of getent
      rather than parsing getent output.
    - Use addgroup/delgroup in place of adduser/deluser.
    - Use --system when adding and deleting group, to ensure creation
      of a system group.
  * debian/buildd.(preinst|postinst|postrm): Add maintainer scripts for
    buildd package.  Move configuration file from /etc/buildd.conf to
    /etc/buildd/buildd.conf if present.  Also create buildd user and
    group for running the buildd daemon.
  * Buildd::Conf: Don't default MAINTAINER_NAME to $DEBEMAIL if unset
    in the configuration file (Closes: #520158).
  * 

 -- Roger Leigh <rleigh@debian.org>  Sun, 17 May 2009 15:01:04 +0100

sbuild (0.58.2-1) unstable; urgency=low

  [ Roger Leigh ]
  * New release.
  * etc/50sbuild: Don't create user home directory inside the build
    chroot.  Home directories are not required for building.
  * lib/Sbuild/ChrootInfoSchroot.pm: Run schroot in a C locale, to
    avoid localisation of the output which breaks parsing
    (Closes: #520755).  This was preventing the detection of chroots
    in some locales.
  * debian/buildd.cron.d: Move example crontab here, with entries
    commented out for now. 
  * debian/rules: Use dh_installcrontab to install crontabs.
  * Remove buildd package for this release, because it's not yet
    ready for use. 

 -- Roger Leigh <rleigh@debian.org>  Sat, 11 Apr 2009 10:20:25 +0100

sbuild (0.58.1-1) unstable; urgency=low

  [ Roger Leigh ]
  * debian/rules: Run configure setting DCMD, SUDO and SCHROOT.
    (Closes: #519097). It's not possible to install sudo as a
    build-dependency due to it not allowing automatic removal, and
    none of the commands are actually needed for the build, just
    setting the default path.
  * sbuild: Don't erase default chroot environment (Closes: #519276).