@@ -37,9 +37,23 @@ mv_conffile() {
 case "$1" in
     configure)
 
+	# If sbuild is a user group, migrate to a system group.  Save
+	# a list of group members, then add them back to the new group
+	# once created.
+	SGID="$(grep ^sbuild: /etc/group | sed -r -e 's/([^:]+):([^:]+):([^:]+):.*/\3/')"
+	if [ -n "$SGID" ] && [ "$SGID" -ge "1000" ]; then
+	    SUSR="$(grep ^sbuild: /etc/group | sed -r -e 's/([^:]+):([^:]+):([^:]+):(.*)$/\4/' -e 's/,/ /g')"
+	    delgroup --quiet sbuild
+	fi
+
         if ! getent group sbuild > /dev/null; then
             addgroup --system --quiet sbuild
         fi
+
+	# Restore group membership to users in old user group (if any)
+	for user in $SUSR; do
+	    adduser $user sbuild
+	done
 
         chmod 2775 /var/lib/sbuild
         # avg-* files from previous purge might have wrong GID
