@@ -11,6 +11,25 @@ set -e
 #        * <new-preinst> `upgrade' <old-version>
 #        * <old-preinst> `abort-upgrade' <new-version>
 
+# Remove a no-longer used conffile
+rm_conffile() {
+    PKGNAME="$1"
+    CONFFILE="$2"
+
+    if [ -e "$CONFFILE" ]; then
+        md5sum="`md5sum \"$CONFFILE\" | sed -e \"s/ .*//\"`"
+        old_md5sum="`dpkg-query -W -f='${Conffiles}' $PKGNAME | sed -n -e \"\\\\' $CONFFILE'{s/ obsolete$//;s/.* //p}\"`"
+        if [ "$md5sum" != "$old_md5sum" ]; then
+            echo "Obsolete conffile $CONFFILE has been modified by you."
+            echo "Saving as $CONFFILE.dpkg-old ..."
+            mv -f "$CONFFILE" "$CONFFILE".dpkg-old
+        else
+            echo "Removing obsolete conffile $CONFFILE ..."
+            rm -f "$CONFFILE"
+        fi
+    fi
+}
+
 # Prepare to move a conffile without triggering a dpkg question
 prep_mv_conffile() {
     PACKAGE="$1"
@@ -24,6 +43,14 @@ prep_mv_conffile() {
         fi
     fi
 }
+
+case "$1" in
+    install|upgrade)
+	if dpkg --compare-versions "$2" le "0.58.3-1"; then
+            rm_conffile "sbuild" "/etc/schroot/setup.d/50sbuild"
+	fi
+	;;
+esac
 
 # dh_installdeb will replace this with shell code automatically
 # generated by other debhelper scripts.
