@@ -30,11 +30,7 @@ builddsysconf_DATA = buildd.conf wanna-build.conf
 exampleconfdir = $(docdir)/examples
 exampleconf_DATA = example.sbuildrc
 
-schrootsetupdir = $(SCHROOT_SYSCONF_DIR)/setup.d
-schrootsetup_SCRIPTS = 50sbuild
-
 EXTRA_DIST =			\
 	$(sbuildsysconf_DATA)	\
 	$(builddsysconf_DATA)	\
-	$(exampleconf_DATA)	\
-	$(schrootsetup_SCRIPTS)
+	$(exampleconf_DATA)
